--- a/day-6-complex-network-analysis-of-corruption/00 - Network Basics.ipynb
+++ b/day-6-complex-network-analysis-of-corruption/00 - Network Basics.ipynb
@@ -34,11 +34,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 432,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-24T01:54:48.441137Z",
-     "start_time": "2019-06-24T01:54:48.435795Z"
+     "end_time": "2019-06-25T20:13:55.322213Z",
+     "start_time": "2019-06-25T20:13:51.652551Z"
     },
     "slideshow": {
      "slide_type": "-"
@@ -100,11 +100,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 433,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-24T01:54:49.469609Z",
-     "start_time": "2019-06-24T01:54:49.458765Z"
+     "end_time": "2019-06-25T20:13:55.477288Z",
+     "start_time": "2019-06-25T20:13:55.473814Z"
     }
    },
    "outputs": [],
@@ -115,11 +115,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 434,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-24T01:54:49.709290Z",
-     "start_time": "2019-06-24T01:54:49.706209Z"
+     "end_time": "2019-06-25T20:13:55.937972Z",
+     "start_time": "2019-06-25T20:13:55.934369Z"
     }
    },
    "outputs": [],
@@ -130,11 +130,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 435,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-24T01:54:50.050777Z",
-     "start_time": "2019-06-24T01:54:50.047287Z"
+     "end_time": "2019-06-25T20:13:56.351618Z",
+     "start_time": "2019-06-25T20:13:56.348686Z"
     }
    },
    "outputs": [],
@@ -145,11 +145,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 436,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-24T01:54:50.257129Z",
-     "start_time": "2019-06-24T01:54:50.252825Z"
+     "end_time": "2019-06-25T20:13:56.718151Z",
+     "start_time": "2019-06-25T20:13:56.715615Z"
     }
    },
    "outputs": [],
@@ -160,11 +160,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 437,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-24T01:54:50.451416Z",
-     "start_time": "2019-06-24T01:54:50.447665Z"
+     "end_time": "2019-06-25T20:13:57.195283Z",
+     "start_time": "2019-06-25T20:13:57.192465Z"
     }
    },
    "outputs": [],
@@ -175,11 +175,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 438,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-24T01:54:50.638185Z",
-     "start_time": "2019-06-24T01:54:50.630060Z"
+     "end_time": "2019-06-25T20:13:57.510608Z",
+     "start_time": "2019-06-25T20:13:57.503152Z"
     }
    },
    "outputs": [
@@ -189,7 +189,7 @@
        "NodeView((4, 'Alice'))"
       ]
      },
-     "execution_count": 438,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,11 +201,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 439,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-24T01:54:50.776870Z",
-     "start_time": "2019-06-24T01:54:50.773864Z"
+     "end_time": "2019-06-25T20:13:57.800749Z",
+     "start_time": "2019-06-25T20:13:57.797819Z"
     }
    },
    "outputs": [],
@@ -217,11 +217,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 440,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-24T01:54:50.970629Z",
-     "start_time": "2019-06-24T01:54:50.964779Z"
+     "end_time": "2019-06-25T20:13:58.061811Z",
+     "start_time": "2019-06-25T20:13:58.057964Z"
     }
    },
    "outputs": [],
@@ -232,11 +232,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 441,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-24T01:54:51.142474Z",
-     "start_time": "2019-06-24T01:54:51.137349Z"
+     "end_time": "2019-06-25T20:13:58.379517Z",
+     "start_time": "2019-06-25T20:13:58.370433Z"
     }
    },
    "outputs": [
@@ -246,7 +246,7 @@
        "EdgeView([('Alice', 'Mary'), ('Mary', 'Steven')])"
       ]
      },
-     "execution_count": 441,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,11 +258,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 442,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-24T01:54:51.356163Z",
-     "start_time": "2019-06-24T01:54:51.350644Z"
+     "end_time": "2019-06-25T20:13:58.742443Z",
+     "start_time": "2019-06-25T20:13:58.739668Z"
     }
    },
    "outputs": [],
@@ -273,11 +273,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 443,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-24T01:54:51.549399Z",
-     "start_time": "2019-06-24T01:54:51.546414Z"
+     "end_time": "2019-06-25T20:13:59.112365Z",
+     "start_time": "2019-06-25T20:13:59.103136Z"
     }
    },
    "outputs": [],
@@ -288,11 +288,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 444,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-24T01:54:51.739425Z",
-     "start_time": "2019-06-24T01:54:51.732515Z"
+     "end_time": "2019-06-25T20:13:59.458932Z",
+     "start_time": "2019-06-25T20:13:59.452630Z"
     }
    },
    "outputs": [
@@ -302,7 +302,7 @@
        "4"
       ]
      },
-     "execution_count": 444,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,11 +314,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 445,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-24T01:54:51.938397Z",
-     "start_time": "2019-06-24T01:54:51.930721Z"
+     "end_time": "2019-06-25T20:13:59.826827Z",
+     "start_time": "2019-06-25T20:13:59.817922Z"
     }
    },
    "outputs": [
@@ -328,7 +328,7 @@
        "0"
       ]
      },
-     "execution_count": 445,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,11 +340,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 446,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-24T01:54:52.099255Z",
-     "start_time": "2019-06-24T01:54:52.094752Z"
+     "end_time": "2019-06-25T20:14:00.127402Z",
+     "start_time": "2019-06-25T20:14:00.120646Z"
     }
    },
    "outputs": [
@@ -354,7 +354,7 @@
        "0"
       ]
      },
-     "execution_count": 446,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,11 +366,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 447,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-24T01:54:52.288101Z",
-     "start_time": "2019-06-24T01:54:52.282712Z"
+     "end_time": "2019-06-25T20:14:00.412283Z",
+     "start_time": "2019-06-25T20:14:00.409653Z"
     }
    },
    "outputs": [],
@@ -390,26 +390,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 448,
+   "execution_count": 67,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-24T01:54:55.998494Z",
-     "start_time": "2019-06-24T01:54:52.686469Z"
+     "end_time": "2019-06-25T20:24:53.199644Z",
+     "start_time": "2019-06-25T20:24:49.793875Z"
     }
    },
    "outputs": [],
    "source": [
     "# input edgelist from file\n",
-    "G = nx.read_edgelist(\"../datafiles/social/facebook/fb.txt\")"
+    "G = nx.read_edgelist(\"datafiles/social/facebook/fb.txt\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 449,
+   "execution_count": 68,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-24T01:54:58.454874Z",
-     "start_time": "2019-06-24T01:54:56.000912Z"
+     "end_time": "2019-06-25T20:24:55.635257Z",
+     "start_time": "2019-06-25T20:24:53.202362Z"
     }
    },
    "outputs": [],
@@ -420,11 +420,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 450,
+   "execution_count": 69,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-24T01:54:58.463094Z",
-     "start_time": "2019-06-24T01:54:58.457590Z"
+     "end_time": "2019-06-25T20:24:55.644574Z",
+     "start_time": "2019-06-25T20:24:55.637888Z"
     }
    },
    "outputs": [],
