--- a/day-2-introduction-to-python-part-II-and-web-scraping/06 - Mini-Project.ipynb
+++ b/day-2-introduction-to-python-part-II-and-web-scraping/06 - Mini-Project.ipynb
@@ -772,24 +772,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 225,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-02T13:01:35.386804Z",
-     "start_time": "2019-07-02T13:01:35.360534Z"
-    }
+     "end_time": "2019-07-02T13:02:48.517443Z",
+     "start_time": "2019-07-02T13:02:48.397765Z"
+    },
+    "scrolled": true
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "random_sample() takes at most 1 positional argument (2 given)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m----------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-222-aaa2707c3c09>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m             \u001b[0mlenj\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcategory_employed\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m             \u001b[0mmin_len\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mleni\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlenj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m             \u001b[0msample1\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msample\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcategory_employed\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmin_len\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m             \u001b[0msample2\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msample\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcategory_employed\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmin_len\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mleni\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0mlenj\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32mmtrand.pyx\u001b[0m in \u001b[0;36mmtrand.RandomState.random_sample\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: random_sample() takes at most 1 positional argument (2 given)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ttest_relResult(statistic=0.0504495325651921, pvalue=0.960594189383159)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=-0.7883255371962423, pvalue=0.445800663382695)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=-1.4975378508098602, pvalue=0.16847781543284177)\n",
+      "Ttest_relResult(statistic=0.2999388460717597, pvalue=0.7710358604903551)\n",
+      "Ttest_relResult(statistic=-0.5189109104251876, pvalue=0.6198195185903999)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=-0.5986883271587532, pvalue=0.5682402448462812)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=nan, pvalue=nan)\n",
+      "Ttest_relResult(statistic=nan, pvalue=nan)\n",
+      "Ttest_relResult(statistic=nan, pvalue=nan)\n",
+      "Ttest_relResult(statistic=nan, pvalue=nan)\n",
+      "Ttest_relResult(statistic=nan, pvalue=nan)\n",
+      "Ttest_relResult(statistic=nan, pvalue=nan)\n",
+      "Ttest_relResult(statistic=nan, pvalue=nan)\n",
+      "Ttest_relResult(statistic=nan, pvalue=nan)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=1.0243597531249011, pvalue=0.33240899197347545)\n",
+      "Ttest_relResult(statistic=0.7388361887977629, pvalue=0.4788307712681754)\n",
+      "Ttest_relResult(statistic=-0.7132310921844974, pvalue=0.49878391816088585)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=-0.03247517527656843, pvalue=0.9748887285460899)\n",
+      "Ttest_relResult(statistic=-0.3967669077817311, pvalue=0.7052669336428916)\n",
+      "Ttest_relResult(statistic=nan, pvalue=nan)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=0.017231602869499176, pvalue=0.9866278083909905)\n",
+      "Ttest_relResult(statistic=-0.09143568118094404, pvalue=0.9291492078333905)\n",
+      "Ttest_relResult(statistic=0.09298737443015126, pvalue=0.9285190152118993)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=0.15877451404202428, pvalue=0.8777815243118201)\n",
+      "Ttest_relResult(statistic=0.09057805107815033, pvalue=0.9307760278906351)\n",
+      "Ttest_relResult(statistic=nan, pvalue=nan)\n",
+      "Ttest_relResult(statistic=-0.8590507494190052, pvalue=0.41043204940030964)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=nan, pvalue=nan)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=0.011932788467373254, pvalue=0.9908122061030902)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=0.8295668247611109, pvalue=0.4385351054078381)\n",
+      "Ttest_relResult(statistic=nan, pvalue=nan)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=1.025261386570478, pvalue=0.36319213101629494)\n",
+      "Ttest_relResult(statistic=0.6852666640573166, pvalue=0.5061978319850027)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=-0.8585890230676441, pvalue=0.4128492762454443)\n",
+      "Ttest_relResult(statistic=-1.0217670916739507, pvalue=0.33356977466242943)\n",
+      "Ttest_relResult(statistic=0.48775717719595046, pvalue=0.6406268965257917)\n",
+      "Ttest_relResult(statistic=0.04713829592506989, pvalue=0.9630688400441088)\n",
+      "Ttest_relResult(statistic=-0.898287802395188, pvalue=0.3952628452332346)\n",
+      "Ttest_relResult(statistic=0.7282750109875585, pvalue=0.4938758539152197)\n",
+      "Ttest_relResult(statistic=nan, pvalue=nan)\n",
+      "Ttest_relResult(statistic=0.8504284649730413, pvalue=0.4149850240804003)\n",
+      "Ttest_relResult(statistic=-0.1916035783353225, pvalue=0.8515437292128144)\n",
+      "Ttest_relResult(statistic=0.22621427608377528, pvalue=0.8321240809489096)\n",
+      "Ttest_relResult(statistic=-0.452877524980973, pvalue=0.6626667764725428)\n",
+      "Ttest_relResult(statistic=-0.9868857842685903, pvalue=0.3431800608647114)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=0.07127336021255355, pvalue=0.9447388776965592)\n",
+      "Ttest_relResult(statistic=0.9211146186859336, pvalue=0.38101842034875877)\n",
+      "Ttest_relResult(statistic=0.035216984918645604, pvalue=0.9728899279349632)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=-0.1098875291265014, pvalue=0.9152051417468683)\n",
+      "Ttest_relResult(statistic=1.1275432009803281, pvalue=0.30257447149167377)\n",
+      "Ttest_relResult(statistic=nan, pvalue=nan)\n",
+      "Ttest_relResult(statistic=-0.04015129387660628, pvalue=0.9687628220285394)\n",
+      "Ttest_relResult(statistic=-0.030348926881068296, pvalue=0.9763324222145671)\n",
+      "Ttest_relResult(statistic=-0.9614874089118949, pvalue=0.3907553453359607)\n",
+      "Ttest_relResult(statistic=-0.0972080740360194, pvalue=0.9249524089392498)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=nan, pvalue=nan)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n",
+      "Ttest_relResult(statistic=0.0, pvalue=1.0)\n"
      ]
     }
    ],
@@ -801,34 +916,28 @@
     "            leni=len(category_employed[i])\n",
     "            lenj=len(category_employed[j])\n",
     "            min_len=min(leni,lenj)\n",
-    "            sample1=np.random.sample(category_employed[i],min_len)\n",
-    "            sample2=np.random.sample(category_employed[i],min_len)\n",
-    "            if leni==lenj: \n",
-    "                print(stats.ttest_rel(sample1, sample2))"
+    "            sample1=np.random.choice(category_employed[i],min_len,replace=False)\n",
+    "            sample2=np.random.choice(category_employed[i],min_len,replace=False)\n",
+    "            print(stats.ttest_rel(sample1, sample2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-07-02T13:01:03.762814Z",
      "start_time": "2019-07-02T13:01:03.750650Z"
     }
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'min_len' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m----------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-221-3584a15fab32>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msample\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcategory_employed\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmin_len\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'min_len' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
