--- a/day-5-machine-learning-part-II/03 - Random Forests.ipynb
+++ b/day-5-machine-learning-part-II/03 - Random Forests.ipynb
@@ -694,11 +694,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-04T13:00:32.372501Z",
-     "start_time": "2019-07-04T12:59:22.819673Z"
+     "end_time": "2019-07-04T13:02:38.041812Z",
+     "start_time": "2019-07-04T13:01:50.603427Z"
     }
    },
    "outputs": [
@@ -713,19 +713,19 @@
        "            min_weight_fraction_leaf=0.0, n_estimators='warn', n_jobs=None,\n",
        "            oob_score=False, random_state=0, verbose=0, warm_start=False),\n",
        "       fit_params=None, iid='warn', n_jobs=None,\n",
-       "       param_grid={'max_depth': range(8, 15), 'n_estimators': range(8, 15)},\n",
+       "       param_grid={'max_depth': range(15, 20), 'n_estimators': range(10, 15)},\n",
        "       pre_dispatch='2*n_jobs', refit=True, return_train_score=True,\n",
        "       scoring=None, verbose=0)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "param_grid = {'max_depth': range(8, 15),\n",
-    "              'n_estimators': range(8, 15)\n",
+    "param_grid = {'max_depth': range(15, 20),\n",
+    "              'n_estimators': range(10, 15)\n",
     "             }\n",
     "grid = GridSearchCV(RandomForestClassifier(random_state=0), \n",
     "                    param_grid=param_grid,\n",
@@ -737,27 +737,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-04T13:00:32.380272Z",
-     "start_time": "2019-07-04T13:00:32.375082Z"
+     "end_time": "2019-07-04T13:02:38.052546Z",
+     "start_time": "2019-07-04T13:02:38.044581Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'max_depth': 14, 'n_estimators': 13}"
+       "{'max_depth': 17, 'n_estimators': 13}"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "grid.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-04T13:04:27.964701Z",
+     "start_time": "2019-07-04T13:04:27.899963Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "scaler = StandardScaler().fit(X_test)\n",
+    "X_test_scaled = scaler.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-04T13:04:49.263974Z",
+     "start_time": "2019-07-04T13:04:49.235384Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "y_pred=grid.predict(X_test_scaled)"
    ]
   },
   {
